# gif-slacker

./: pyproject.toml
gif_slacker/: __main__.py  cmd.py  optimizer.py  utils.py  value_generator.py
